dev/ingress/fake73-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake73-ingress
  namespace: fake73-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake73.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake73-service
                port:
                  number: 20073
